# migrateos

./: .gitignore  README.md  ROADMAP.md  migrate_scan.py  pyproject.toml
.github/workflows/: test_code.yml
examples/: example_manifest.yml
src/: __init__.py  cli.py
src/bundler/: __init__.py  file_collector.py
src/cli/: __init__.py  cli.py
src/generator/: __init__.py  ansible_generator.py
src/generator/templates/: WARNINGS.md.j2  ansible.cfg.j2  inventory.ini.j2  requirements.yml.j2  site.yml.j2
src/scanner/: __init__.py  configs.py  containers.py  cron.py  directories.py  firewalld.py  network.py  os_facts.py  packages.py  selinux.py  services.py  sysctl.py  users.py
src/utils/: __init__.py  command.py  constants.py  dnf_utils.py  dnf_version.py  paths.py  yaml_utils.py
tests/: __init__.py  conftest.py  test_ansible_output.py  test_config_include_scanning.py  test_dnf_parsing.py  test_firewalld_parsing.py  test_manifest_roundtrip.py  test_runtime_detection.py  test_secret_detection.py  test_systemctl_parsing.py
tests/bundler/: __init__.py  test_file_collector.py
tests/cli/: __init__.py  test_cli.py
tests/generator/: __init__.py  test_ansible_output.py
tests/scanner/: __init__.py  test_configs.py  test_containers.py  test_cron.py  test_directories.py  test_firewalld.py  test_network.py  test_os_facts.py  test_packages.py  test_selinux.py  test_services.py  test_sysctl.py  test_users.py
tests/utils/: __init__.py  test_command.py  test_dnf_utils.py  test_dnf_version.py  test_paths.py  test_yaml_utils.py
(+17 files in other folders)
